# deck

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  skaffold.yaml
auth-api/: Cargo.toml
content-api/: BUILD  Cargo.toml  diesel.toml
content-api/migrations/2024-09-30-192053_create_cards/: down.sql  up.sql
content-api/migrations/2024-12-11-113948_initial_create/: down.sql  up.sql
content-api/migrations/2024-12-12-072150_card_names/: down.sql  up.sql
content-api/migrations/2025-02-21-123932_initial_create/: down.sql  up.sql
content-api/src/: main.rs  schema.rs
content-api/src/store/: models.rs  schema.rs
frontend/: Dockerfile  bun.lockb  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: auth.ts
frontend/src/app/: globals.scss  layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/components/: AuthProvider.tsx  Footer.tsx  Header.tsx  NewCardButton.tsx  Profile.tsx  SignInButton.tsx
helm/: Chart.yaml
helm/templates/: database.yaml
