"""Bazel Module for the ameijboom portfolio platform"""
module(name = "portfolio")

rust_version = "1.81.0"

bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "rules_rust", version = "0.45.1")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
bazel_dep(name = "toolchains_llvm", version = "1.2.0")
bazel_dep(name = "chrome-linux-sysroot", version = "0.0.1")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "16.0.0",
)

llvm.sysroot(
    name = "llvm_toolchain",
    targets = ["linux-aarch64"],
    label = "@@chrome-linux-sysroot~~_repo_rules~debian_bullseye_arm64//:sysroot",
)

llvm.sysroot(
    name = "llvm_toolchain",
    targets = ["linux-x86_64"],
    label = "@@chrome-linux-sysroot~~_repo_rules~debian_bullseye_amd64//:sysroot",
)

use_repo(llvm, "llvm_toolchain")
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:a9056d2232d16e3772bec3ef36b93a5ea9ef6ad4b4ed407631e534b85832cf40",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64", "linux/arm64/v8"],
)

use_repo(oci, "distroless_cc", "distroless_cc_linux_amd64", "distroless_cc_linux_arm64_v8")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = [rust_version],
    extra_target_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)

use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//content-api:Cargo.toml",
        "//:Cargo.toml",
    ],
)

use_repo(crate, "crates")

register_toolchains(
    "@rust_toolchains//:all",
    "@llvm_toolchain//:all",
)