[package]
name = "content-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
diesel = { version = "2.2.0", default-features = false, features = ["postgres"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.8", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls"] }
rustls = { version = "0.23.13", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
