[package]
name = "content-api"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
base64 = "0.22.1"
tracing = "0.1.40"
serde_json = "1.0"
jsonwebtoken = "9.1.0"
thiserror = "1.0.58"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
uuid = { version = "1.0", features = ["v4", "serde", "v1"] }
tokio-postgres-rustls = { version = "0.13.0"}
http-api-problem = { version = "0.58.0", features = ["axum", "api-error"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    "cors",
    "validate-request",
] }
tokio-postgres = { version = "0.7.10", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
diesel = { version = "2.0", features = [
    "postgres",
    "chrono",
    "64-column-tables",
    "serde_json",
    "uuid"
]}
diesel-async = { version = "0.5.0", features = [
    "postgres",
    "bb8",
]}
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
    "brotli",
    "gzip",
    "cookies",
] }
